--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Red-Dragon-Bot",
+  "name": "MFC-BOT",
   "version": "2.0.0",
   "description": "WhatsApp Using Lib Baileys Multi Device",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "termux",
     "whatsapp",
     "2022",
-    "RedDragon",
+    "MFC",
     "base",
     "baileys-md",
     "bot",
